pdf_content.txt
file:///data/cdl/handbook/extract_pdf.mjs:2
import pdf from 'pdf-parse';
       ^^^
SyntaxError: The requested module 'pdf-parse' does not provide an export named 'default'
    at #_instantiate (node:internal/modules/esm/module_job:254:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:369:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:671:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.11.1
